--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -312,10 +312,10 @@ Declare Friendship ([numberOfTurns] turns) = Заявити про дружбу 
 May our nations forever remain united! = Нехай наші народи назавжди залишаються об’єднаними!
 Indeed! = Справді!
  # Requires translation!
-Denounce ([numberOfTurns] turns) = 
+Denounce ([numberOfTurns] turns) = Звинувачення (Ходів: [numberOfTurns])
 We will remember this. = Ми пам’ятатимемо це.
 
-Unforgivable = Непрощальне
+Unforgivable = непрощальні
 Enemy =  ворожі
 Competitor =  конкурентні
 Neutral =  нейтральні
@@ -326,53 +326,53 @@ Ally =  союзницькі
 ## Diplomatic modifiers
 
  # Requires translation!
-You declared war on us! = 
+You declared war on us! = Ви оголосили нам війну!
  # Requires translation!
-Your warmongering ways are unacceptable to us. = 
+Your warmongering ways are unacceptable to us. = Ваші войовничі способи неприйнятні для нас.
 You have captured our cities! = Ви захопили всі наші міста!
  # Requires translation!
-We applaud your liberation of our conquered cities! = 
+We applaud your liberation of our conquered cities! = Ми плескаємо в долоні вашому звільненню наших завойованих міст!
  # Requires translation!
-Years of peace have strengthened our relations. = 
+Years of peace have strengthened our relations. = Роки миру зміцнили наші відносини.
  # Requires translation!
-Our mutual military struggle brings us closer together. = 
+Our mutual military struggle brings us closer together. = Наша взаємна військова боротьба зближує нас.
  # Requires translation!
-We have signed a public declaration of friendship = 
+We have signed a public declaration of friendship = Ми підписали публічну декларацію про дружбу
  # Requires translation!
-You have declared friendship with our enemies! = 
+You have declared friendship with our enemies! = Ви оголосили дружбу з нашими ворогами!
  # Requires translation!
-You have declared friendship with our allies = 
+You have declared friendship with our allies = Ви оголосили дружбу з нашими союзниками!
  # Requires translation!
-Our open borders have brought us closer together. = 
+Our open borders have brought us closer together. = Наші відкриті кордони зблизили нас.
  # Requires translation!
-Your so-called 'friendship' is worth nothing. = 
+Your so-called 'friendship' is worth nothing. = Ваша так звана «дружба» нічого не варта.
  # Requires translation!
-You have publicly denounced us! = 
+You have publicly denounced us! = Ви публічно засудили нас!
  # Requires translation!
-You have denounced our allies = 
+You have denounced our allies = Ви засудили наших союзників
  # Requires translation!
-You have denounced our enemies = 
+You have denounced our enemies = Ви засудили наших ворогів
  # Requires translation!
-You betrayed your promise to not settle cities near us = 
+You betrayed your promise to not settle cities near us = Ви зрадили свою обіцянку не засновувати міста поблизу нас
  # Requires translation!
-You fulfilled your promise to stop settling cities near us! = 
+You fulfilled your promise to stop settling cities near us! = Ви виконали свою обіцянку припинити заселяти міста біля нас! =
  # Requires translation!
-You refused to stop settling cities near us = 
+You refused to stop settling cities near us = Ви відмовилися зупиняти заселення міст біля нас
  # Requires translation!
-Your arrogant demands are in bad taste = 
+Your arrogant demands are in bad taste = Ваші пихаті вимоги - поганий смак
  # Requires translation!
-Your use of nuclear weapons is disgusting! = 
+Your use of nuclear weapons is disgusting! = Ваше використання ядерної зброї огидне!
 
  # Requires translation!
-Demands = 
+Demands = Вимоги
  # Requires translation!
-Please don't settle new cities near us. = 
+Please don't settle new cities near us. = Будь ласка, не засновуйте нові міста поблизу нас.
  # Requires translation!
-Very well, we shall look for new lands to settle. = 
+Very well, we shall look for new lands to settle. = Дуже добре, ми будемо шукати нові землі для заселення.
  # Requires translation!
-We shall do as we please. = 
+We shall do as we please. = Ми будемо робити, як забажаємо.
  # Requires translation!
-We noticed your new city near our borders, despite your promise. This will have....implications. = 
+We noticed your new city near our borders, despite your promise. This will have....implications. = Ми помітили ваше нове місто біля наших кордонів, незважаючи на вашу обіцянку. Це матиме....  наслідки.
 
 # City states
 
@@ -390,77 +390,77 @@ Gift [giftAmount] gold (+[influenceAmount] influence) =
 Relationship changes in another [turnsToRelationshipChange] turns = 
 
  # Requires translation!
-Cultured = 
+Cultured = Культурний
  # Requires translation!
-Maritime = 
+Maritime = Морський
  # Requires translation!
-Mercantile = 
+Mercantile = Торговельний
  # Requires translation!
-Militaristic = 
+Militaristic = Войовничий
  # Requires translation!
-Type:  = 
+Type:  = Тип:
  # Requires translation!
-Influence:  = 
+Influence:  = Вплив
  # Requires translation!
 Reach 30 for friendship. = 
  # Requires translation!
 Reach highest influence above 60 for alliance. = 
  # Requires translation!
-Ally:  = 
+Ally:  = СоюзникЖ
 
 # Trades 
 
  # Requires translation!
-Trade = 
+Trade = Торгівля
  # Requires translation!
-Offer trade = 
+Offer trade = Запропонувати торгівлю
  # Requires translation!
-Retract offer = 
+Retract offer = Відкликання пропозиції
  # Requires translation!
-What do you have in mind? = 
+What do you have in mind? = Що ви маєте на увазі?
  # Requires translation!
-Our items = 
+Our items = Наші предмети
  # Requires translation!
 Our trade offer = 
  # Requires translation!
 [otherCiv]'s trade offer = 
  # Requires translation!
-[otherCiv]'s items = 
+[otherCiv]'s items = Предмети нації [otherCiv]
  # Requires translation!
 Pleasure doing business with you! = 
  # Requires translation!
-I think not. = 
+I think not. = Я думаю, що ні.
  # Requires translation!
-That is acceptable. = 
+That is acceptable. = Це не прийнятно
  # Requires translation!
-Accept = 
+Accept = Прийняти
  # Requires translation!
-Keep going = 
+Keep going = Продовжуйте
  # Requires translation!
-There's nothing on the table = 
+There's nothing on the table = На столі нічого немає
  # Requires translation!
-Peace Treaty = 
+Peace Treaty = Мирна угода
  # Requires translation!
-Agreements = 
+Agreements = Угоди
  # Requires translation!
-Open Borders = 
+Open Borders = Відкриті кордони
  # Requires translation!
-Gold per turn = 
+Gold per turn = Золота за хід
  # Requires translation!
-Cities = 
+Cities = Міста
 Technologies = Технології
  # Requires translation!
-Declarations of war = 
+Declarations of war = Оголошення війни
  # Requires translation!
-Introduction to [nation] = 
+Introduction to [nation] = Вступ до [nation]
  # Requires translation!
-Declare war on [nation] = 
+Declare war on [nation] = Огосити війну [nation]
 Luxury resources = Ресурси розкоші
 Strategic resources = Стратегічні ресурси
 replaces = замінює
 [resourceName] not required = [resourceName] не потрібен
  # Requires translation!
-Lost ability = 
+Lost ability = Утрачена здібність
 National ability = Національна здібність
 
 # Nations
@@ -516,7 +516,7 @@ Otto von Bismark = Отто фон Бісмарк
 India = Індія
 Gandhi = Магатма Ґанді
  # Requires translation!
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
+Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = Нещастя від кількості міст подвоюється, нещастя від кількості населення зменшується удвічі
 
 The Ottomans = Османи
 Suleiman I = Сулейман I Пишний
@@ -547,11 +547,11 @@ Askia = Аскія
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Отримують утрічі більше золота з варварських таборів та розграблення міст. Підрозділи, які на воді, можуть захищатися. 
 
  # Requires translation!
-Spain = 
+Spain = Іспанія
  # Requires translation!
-Isabella = 
+Isabella = Ізаела
  # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 золота за виявлення природного дива (бонус збільшується до 500 золотих, якщо ви були першими). Культура, щастя та врожайність клітин біля природних чудес подвоїлися.
 
 # New game screen
 
@@ -570,9 +570,9 @@ Map generation type = Тип генерації мап
 Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
-No ancient ruins = Немає древніх руїн
+No ancient ruins = Без древніх руїн
  # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Без природних див
 Victory conditions = Умови перемоги
 Scientific = Наукова
 Domination = Загарбання
@@ -746,13 +746,9 @@ One of our trades with [nation] has been cut short = Достроково зак
 We have allied with [nation]. = Ми тепер союзники з [nation].
 We have lost alliance with [nation]. = Тепер ми не союзники з [nation].
  # Requires translation!
-We have discovered [naturalWonder]! = 
+We have discovered [naturalWonder]! = Ми винайшли [naturalWonder]!
  # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
- # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
- # Requires translation!
-Your relationship with [cityStateName] degraded = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = Ми отримали [goldAmount] золота за винаходження [naturalWonder]
 
 # World Screen UI
 
@@ -924,7 +920,7 @@ Action = Дія
 Defeated = Переможено
 Tiles = Клітини
  # Requires translation!
-Natural Wonders = 
+Natural Wonders = Природні дива
 
 #Victory
 
@@ -932,7 +928,7 @@ Science victory = Научна перемога
 Cultural victory = Культурна перемога
 Conquest victory = Завоювання
 Complete all the spaceship parts\n to win! = Побудуйте усі частини космічного корабля\n, щоб виграти!
-Complete 5 policy branches\n to win! = Завершіть 4 галузі політики\n,щоб виграти!
+Complete 4 policy branches\n to win! = Завершіть 4 галузі політики\n,щоб виграти!
 Destroy all enemies\n to win! = Знищь всіх ворогів\n, щоб виграти!
 You have won a scientific victory! = Ви здобули научну перемогу!
 You have won a cultural victory! = Ви здобули культурну перемогу!
@@ -1011,46 +1007,46 @@ Requires = Потребує
 # Civilopedia Tutorials names
 
  # Requires translation!
-After Conquering = 
+After Conquering = Після завоювання
  # Requires translation!
-City Range = 
+City Range = Дальність міста
  # Requires translation!
-Contact Me = 
+Contact Me = Зв’яжіться зі мною
  # Requires translation!
-Culture and Policies = 
+Culture and Policies = Культура і політика
  # Requires translation!
-Embarking = 
+Embarking = На борту
  # Requires translation!
-Enemy City = 
+Enemy City = Вороже місто
  # Requires translation!
-Idle Units = 
+Idle Units = Незайняті одиниці
  # Requires translation!
-Injured Units = 
+Injured Units = Пошкоджені підрозділи
  # Requires translation!
-Introduction = 
+Introduction = Введення
  # Requires translation!
-Luxury Resource = 
+Luxury Resource = Ресурси 
  # Requires translation!
-New Game = 
+New Game = Нова гра
  # Requires translation!
-Roads and Railroads = 
+Roads and Railroads = Дороги і колії
  # Requires translation!
-Siege Units = 
+Siege Units = Облогові підрозділи
  # Requires translation!
-Strategic Resource = 
+Strategic Resource = Стратегічний ресурс
  # Requires translation!
-Unhappiness = 
+Unhappiness = Нещастя
  # Requires translation!
-Victory Types = 
+Victory Types = Види перемоги
  # Requires translation!
-Workers = 
+Workers = Робітники
 
 # Other civilopedia things
  # Requires translation!
-Nations = 
+Nations = Нації
 Promotions = Акції
  # Requires translation!
-Available for [unitTypes] = 
+Available for [unitTypes] = Доступно для
 
 # Policies
 
@@ -1062,33 +1058,33 @@ Tradition = Традиція
 +3 culture in capital and increased rate of border expansion = +3 культури в столиці і підвищення швидкості розширення кордонів
 Aristocracy = Аристокатія
  # Requires translation!
-+15% production when constructing wonders, +1 happiness for every 10 citizens in a city = 
++15% production when constructing wonders, +1 happiness for every 10 citizens in a city = +15% Виробництва при будуванні див, +1 щастя за кожних 10 мешканців в місті
  # Requires translation!
-Legalism = 
+Legalism = Легалізм
  # Requires translation!
-Immediately creates a cheapest available cultural building in each of your first 4 cities for free = 
+Immediately creates a cheapest available cultural building in each of your first 4 cities for free = Негайно створює найдешевшу культурну будівлю в кожному з перших чотирьої твоїх міст безкоштовно
 Oligarchy = Олігархія
  # Requires translation!
 Units in cities cost no Maintenance, garrisoned city +50% attacking strength = 
  # Requires translation!
 Landed Elite = 
  # Requires translation!
-+10% food growth and +2 food in capital = 
++10% food growth and +2 food in capital = +10% до зростання їжі і +2 ї
  # Requires translation!
-Monarchy = 
+Monarchy = Монархія
  # Requires translation!
-+1 gold and -1 unhappiness for every 2 citizens in capital = 
++1 gold and -1 unhappiness for every 2 citizens in capital = +1 золото і -1 нещастя за кожних двух жителів у столиці
  # Requires translation!
-Tradition Complete = 
+Tradition Complete = Традиція завершена
  # Requires translation!
-+15% growth and +2 food in all cities = 
++15% growth and +2 food in all cities = +15% зростання і +2 їжі у всіх містах
 
  # Requires translation!
 Liberty = 
  # Requires translation!
-+1 culture in every city = 
++1 culture in every city = +1 культура в кожному місті
  # Requires translation!
-Collective Rule = 
+Collective Rule = Колективне керівництво
  # Requires translation!
 Training of settlers increased +50% in capital, receive a new settler near the capital = 
  # Requires translation!
@@ -1486,7 +1482,7 @@ Great Barrier Reef = Великий бар'єрний риф
 Krakatoa = Кракатау
 Mount Fuji = Гора Фудзі
  # Requires translation!
-Old Faithful = 
+Old Faithful = Старий служака
 Rock of Gibraltar = Гібралтарська скеля
 Cerro de Potosi = Серро-Ріко
 El Dorado = Ельдорадо 
@@ -1707,7 +1703,7 @@ Bonus for units in 2 tile radius 15% = Підрозділи в радіусі 2 
 
 Pick promotion = Обрати поліпшення
  # Requires translation!
- OR  = 
+ OR  = Або
 Bonus vs [unitType] = Перевага проти типу: [unitType]
 Penalty vs [unitType] = Поступається підрозділам типу: [unitType]
 Accuracy I = Точність I
@@ -1795,4 +1791,4 @@ Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
 Rejuvenation = Відновлення здоров’я
  # Requires translation!
-All healing effects doubled = 
+All healing effects doubled = Усі відновлювлювальні ефекти подвоюються
