Add crash reporting controller and email sending on android (#1509)

--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -17,6 +17,8 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = ¡Mira tus estadísticas!\nEntra en la ventana de Visión general (arriba a la derecha) >\nHaz clic en 'Estadísticas'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh no! Parece que algo se ha roto! Esto no debería haber ocurrido! Mánda me un email (yairm210@hotmail.com , sólo en Inglés) con la información de la partida (menú -> guardar partida -> copiar información de la partida -> copiar en el email) intentaré solucionarlo lo antes posible!
+ # Requires translation!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
 
 # Buildings
 
