Added notification text to ranslations

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1155,6 +1155,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
