--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -679,14 +679,11 @@ One of our trades with [nation] has been cut short = Un nostro accordo con [nati
 [nation] refused to stop settling cities near us! = [nation] ha rifiutato di smettere di fondare città vicino a noi!
 We have allied with [nation]. = Abbiamo stretto un'alleanza con [nation].
 We have lost alliance with [nation]. = Non siamo più alleati di [nation].
- # Requires translation!
-We have discovered [naturalWonder]! = 
- # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
- # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
- # Requires translation!
-Your relationship with [cityStateName] degraded = 
+We have discovered [naturalWonder]! = Abbiamo scoperto [naturalWonder]!
+We have received [goldAmount] Gold for discovering [naturalWonder] = Abbiamo ricevuto [goldAmount] gold per la scoperta di [naturalWonder]
+Your relationship with [cityStateName] is about to degrade = Il rapporto con [cityStateName] sta per deteriorarsi
+Your relationship with [cityStateName] degraded = Il rapporto con [cityStateName] si è deteriorato
+A new barbarian encampment has spawned! = E' sorto un nuovo accampamento barbaro!
 
 # World Screen UI
 
@@ -857,8 +854,7 @@ Closest city = Città più vicina
 Action = Azione
 Defeated = Sconfitto
 Tiles = Caselle
- # Requires translation!
-Natural Wonders = 
+Natural Wonders = Meraviglie Naturali
 
 #Victory
 
@@ -1619,5 +1615,4 @@ Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
 Rejuvenation = Ringiovanimento
- # Requires translation!
-All healing effects doubled = 
+All healing effects doubled = Tutti gli effetti di cura sono raddoppiati
