--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1,23 +1,14 @@
 
 # Tutorial tasks
 
-
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Mova uma unidade!\nClique em uma unidade > Clique em uma destinação > Clique no popup da seta
-
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Funde uma cidade!\nSelecione o colono (unidade da bandeira) > Clique em "Fundar cidade" (canto inferior esquerdo)
-
 Enter the city screen!\nClick the city button twice = Entre no painel da cidade!\nClique no botão da cidade duas vezes
-
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Escolha uma tecnologia para pesquisar!\nClique no botão de tecnologia (esverdeado, canto superior esquerdo) > \n selecione a tecnologia > clique "Pesquisar"(canto inferior direito)
-
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Escolha uma construção!\nEntre no painel da cidade > Clique em uma unidade ou edificação (lado esquerdo)
-
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passe um turno!\nPercorra as unidades com "Próxima unidade" > Clique em "Próximo turno"
-
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reatribua hexágonos trabalhados!\nEntre no painel da cidade > clique no hexágono atribuído (verde) para desatribuí-lo >  \n clique em um hexágono não atribuído para atribuí-lo um habitante
-
 Meet another civilization!\nExplore the map until you encounter another civilization! = Conheça outra civilização!\nExplore o mapa até encontrar outra civilização!
-
 Open the options table!\nClick the menu button (top left) > click 'Options' = Abra a tabela de opções!\nClique no botão do menu (canto superior esquerdo) > Clique em "Opções"
  # Requires translation!
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
@@ -346,7 +337,7 @@ You declared war on us! = Você declarou guerra contra nós!
 Your warmongering ways are unacceptable to us. = Seus costumes de guerra são inaceitáveis para nós.
 You have captured our cities! = Você capturou nossas(nossa) cidades(cidade)!
  # Requires translation!
-We applaud your liberation of our conquered cities! =
+We applaud your liberation of our conquered cities! = 
 Years of peace have strengthened our relations. = Anos de paz fortaleceram nossas relações.
 Our mutual military struggle brings us closer together. = Nossas lutas mutuas nos fazem mais próximos.
 We have signed a public declaration of friendship = Assinamos uma declaração pública de amizade
@@ -808,6 +799,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
