--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -17,8 +17,8 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 查看当前文明详细信息!\n点击概览按钮(右上角) >\n点击"统计"
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = NO!看起来游戏好像出现了灾难性的Bug! 这绝对不应该发生! 请将游戏存档信息发送给我，方法如下：依次点击“菜单->保存游戏->复制当前游戏数据到剪贴板”，将剪贴板的内容通过email发送给我。我的email地址：yairm210@hotmail.com。我会尽快处理!
-# Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! =
+ # Requires translation!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
 
 # Buildings
 
@@ -693,6 +693,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
