--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -689,6 +689,8 @@ We have discovered [naturalWonder]! = ¡Hemos descubierto [naturalWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Hemos recibido [goldAmount] de oro por descubrir [naturalWonder]
 Your relationship with [cityStateName] is about to degrade = Tus relaciones con [cityStateName] están a punto de empeorar
 Your relationship with [cityStateName] degraded = Tus relaciones con [cityStateName] han empeorado
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
