--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -682,6 +682,7 @@ We have discovered [naturalWonder]! =
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
 Your relationship with [cityStateName] is about to degrade = 
 Your relationship with [cityStateName] degraded = 
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
