--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -19,7 +19,7 @@ See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Hrom do čepice! Vypadá to, že se něco HÓÓÓDNĚ pokaziloTohle by se v ŽÁDNÉM PŘÍPADĚ nemělo stávat! Prosím pošlete mi (yairm210@hotmail.com) email s informacemi o hře (menu -> uložit hru -> kopírovat herní info -> vložit do emailu) a já se to pokusím opravit jak nejrychleji budu umět!
  # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! =
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
 
 # Buildings
 
@@ -692,6 +692,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
