--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -32,7 +32,7 @@ See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = 이런, 뭔가 심각한 일이 일어난 것 같군요! 원래라면 일어나지 않아야 하는 일인데 말이죠! (yairm210@hotmail.com) 이메일로 게임 정보를 함께 보내주세요. (메뉴 -> 게임 저장 -> 게임 정보 복사 -> 이메일에 붙여넣기) 하루빨리 찾아서 이런 일이 일어나지 않도록 하겠습니다!
  # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! =
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
 
 # Buildings
 
@@ -715,6 +715,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
