--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -17,8 +17,7 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Visualizza le tue statistiche!\nEntra nella tua schermata Panoramica (in alto a sinistra)\nClicca su 'Statistiche'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Santi numi! Pare che qualcosa sia andato disastrosamente storto! Quello che è successo non era assolutamente previsto! Mandami un'email all'indirizzo yairm210@hotmail.com con l'info della partita (menu -> salva partita -> copia info partita -> incolla su email) e proverò a riparare il guasto il più in fretta possibile!
- # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Oh no! Sembra che sia accaduto qualcosa di storto! Quello che è successo non doveva succedere! Dammi un rapporto e noi proveremo a sistemarlo il più in fretta possibile!
 
 # Buildings
 
@@ -940,47 +939,28 @@ Requires = Richiede
 
 # Civilopedia Tutorials names
 
- # Requires translation!
-After Conquering = 
- # Requires translation!
-City Range = 
- # Requires translation!
-Contact Me = 
- # Requires translation!
-Culture and Policies = 
- # Requires translation!
-Embarking = 
- # Requires translation!
-Enemy City = 
- # Requires translation!
-Idle Units = 
- # Requires translation!
-Injured Units = 
- # Requires translation!
-Introduction = 
- # Requires translation!
-Luxury Resource = 
- # Requires translation!
-New Game = 
- # Requires translation!
-Roads and Railroads = 
- # Requires translation!
-Siege Units = 
- # Requires translation!
-Strategic Resource = 
- # Requires translation!
-Unhappiness = 
- # Requires translation!
-Victory Types = 
- # Requires translation!
-Workers = 
+After Conquering = Città conquistata!
+City Range = Raggio cittadino
+Contact Me = Contattami
+Culture and Policies = Cultura e politiche
+Embarking = Imbarcazioni
+Enemy City = Città nemiche
+Idle Units = Unità non usate
+Injured Units = Unità ferite
+Introduction = Introduzione
+Luxury Resource = Risorse di lusso
+New Game = Nuova partita
+Roads and Railroads = Strade e ferrovie
+Siege Units = Unità d'assedio
+Strategic Resource = Risorse strategiche
+Unhappiness = Infelicità
+Victory Types = Condizioni di vittoria
+Workers = Lavoratori
 
 # Other civilopedia things
- # Requires translation!
-Nations = 
+Nations = Civiltà
 Promotions = Promozioni
- # Requires translation!
-Available for [unitTypes] = 
+Available for [unitTypes] = Disponibile per [unitTypes]
 
 # Policies
 
