--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -7,18 +7,18 @@ Enter the city screen!\nClick the city button twice = Allez dans l'écran d'une 
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Choisissez une technologie à rechercher !\nCliquer sur le bouton technologies (en vert, en haut à gauche) > \n Choisir une technologie > Cliquer sur 'Rechercher' (en bas à droite)
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Choisissez une construction !\nAllez dans l'écran d'une cité  > Cliquez sur une unité ou un bâtiment (sur le coté gauche)
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passer un tour !\nParcourir les unités avec 'Unité suivante'
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Réassignez les tuiles utilisées\nAllez dans l'écran d'une cité > Cliquer la tuile utilisée (verte) pour la libérer > \nCliquer sur une tuile libre pour lui affecter de la population
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Réassignez les cases utilisées\nAllez dans l'écran d'une cité > Cliquer la case utilisée (verte) pour la libérer > \nCliquer sur une case libre pour lui affecter de la population
 Meet another civilization!\nExplore the map until you encounter another civilization! = Rencontrez une autre civilisation !\nExplorez la carte jusqu'à rencontrer une autre civilisation !
 Open the options table!\nClick the menu button (top left) > click 'Options' = Ouvrez la table des options !\nCliquer sur le menu (en haut à gauche) > Cliquer sur 'Options'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Construisez une amélioration !\nConstruisez un Ouvrier > Déplacez le sur une tuile de plaine ou de prairie > \n Choisissez 'Bâtir une amélioration' > Choisissez la farme > \n Laissez l'ouvrir sur place jusqu'à ce qu'il ait terminé
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Construisez une amélioration !\nConstruisez un Ouvrier > Déplacez le sur une case de plaine ou de prairie > \n Choisissez 'Bâtir une amélioration' > Choisissez la farme > \n Laissez l'ouvrir sur place jusqu'à ce qu'il ait terminé
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Créez une route commerciale !\nConstruisez une route entre votre capitale et une autre cité\nOu, automatisez votre ouvrir et laissez le faire.
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Partez à la conquête d'une cité !\nRabaissez une cité ennemie jusqu'à un faible niveau de santé > \nEntrez dans la cité avec une unité de mélée
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Déplacez une unité aérienne !\nSéléctionnez une unité aérienne > Séléctionnez une autre cité à portée > \nDéplacez l'unité vers l'autre cité
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Observez vos statistiques en détail !\n Allez dans la vue d'ensemble (dans le coin en haut à droite) >\nCliquez sur 'Statistiques'
 
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez un mail à yairm210@hotmail.com avec les informations de la partie (Menu (en haut à gauche) -> Charger une partie -> Copy saved game to clipboard -> Copier dans le mail) et j'essayerai de régler cela aussi vite que possible !
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez un courriel à yairm210@hotmail.com avec les informations de la partie (Menu (en haut à gauche) -> Charger une partie -> Copy saved game to clipboard -> Copier dans le mail) et j'essayerai de régler cela aussi vite que possible !
  # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez nous un rapport et nous essaierons de régler cela aussi vite que possible !
 
 # Buildings
 
@@ -150,7 +150,7 @@ All newly-trained melee, mounted, and armored units in this city receive the Dri
 
 Angkor Wat = Angkor Wat
 'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 'Un temple est une construction sans équivalent. Il a les tours, les décorations et tous les rafinements que le génie humain peut concevoir.' - Antonio da Magdalena
-Cost of acquiring new tiles reduced by 25% = Coût d'acquisition de nouvelles tuiles réduit de 25%
+Cost of acquiring new tiles reduced by 25% = Coût d'acquisition de nouvelles cases réduit de 25%
 
 Porcelain Tower = Tour de Porcelaine
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Les choses semblent toujours plus juste quand nous les observons à posteriori, c'est de cette tour inaccessible du passé que Longing se penche et fait signe.' - James Russell Lowell
@@ -462,7 +462,7 @@ Pay only one third the usual cost for naval unit maintenance. Melee naval units 
 
 Korea = Corée
 Sejong = Sejong
-+2 Science for all specialists and Great Person tile improvements = +2 en Science pour tous les spécialistes les améliorations de tuiles des personnages illustres
++2 Science for all specialists and Great Person tile improvements = +2 en Science pour tous les spécialistes les améliorations de cases des personnages illustres
 
 Iroquois = Iroquois
 Hiawatha = Hiawatha
@@ -485,11 +485,11 @@ Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Reçoit 3 fois plus d'or lors des pillages de campement barbare et de villes. Les unités embarquées peuvent se défendre.
 
  # Requires translation!
-Spain = 
+Spain = Espagne
  # Requires translation!
-Isabella = 
+Isabella = Isabelle
  # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Or pour la découverte d'une merveille de la Nature (500 si vous êtes le premier à la découvrir). La Culture, le Bonheur et le rendement de la case de la Merveille de la Nature sont doublés
 
 # New game screen
 
@@ -510,7 +510,7 @@ One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
 No ancient ruins = Aucune ruine ancienne
  # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Aucune Merveille de la Nature
 Victory conditions = Conditions de victoire
 Scientific = Scientifique
 Domination = Conquête
@@ -684,15 +684,13 @@ One of our trades with [nation] has been cut short = L'un de nos accord commerci
 We have allied with [nation]. = Nous sommes alliés avec le/la/l' [nation].
 We have lost alliance with [nation]. = Notre alliance est terminée avec le/la/l' [nation].
  # Requires translation!
-We have discovered [naturalWonder]! = 
+We have discovered [naturalWonder]! = Nous avons découverts [naturalWonder] !
  # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = Nous avons reçu [goldAmount] Or pour la découverte de [naturalWonder]
  # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
+Your relationship with [cityStateName] is about to degrade = Notre relation avec [cityStateName] va se dégrader
  # Requires translation!
-Your relationship with [cityStateName] degraded = 
- # Requires translation!
-A new barbarian encampment has spawned! = 
+Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
 
 # World Screen UI
 
@@ -862,9 +860,9 @@ Name = Nom
 Closest city = Ville la plus proche
 Action = Action
 Defeated = Vaincu
-Tiles = Tuiles
+Tiles = Cases
  # Requires translation!
-Natural Wonders = 
+Natural Wonders = Merveilles de la Nature
 
 #Victory
 
@@ -951,46 +949,46 @@ Requires = Requiert
 # Civilopedia Tutorials names
 
  # Requires translation!
-After Conquering = 
+After Conquering = Prise d'une cité
  # Requires translation!
-City Range = 
+City Range = Portée d'une Cité
  # Requires translation!
-Contact Me = 
+Contact Me = Contactez moi
  # Requires translation!
-Culture and Policies = 
+Culture and Policies = Culture et Doctrines
  # Requires translation!
-Embarking = 
+Embarking = Embarquer
  # Requires translation!
-Enemy City = 
+Enemy City = Cité Ennemie
  # Requires translation!
-Idle Units = 
+Idle Units = Unités Inactives
  # Requires translation!
-Injured Units = 
+Injured Units = Unités Blessées
  # Requires translation!
-Introduction = 
+Introduction = Introduction
  # Requires translation!
-Luxury Resource = 
+Luxury Resource = Ressources de Luxe
  # Requires translation!
-New Game = 
+New Game = Nouvelle Partie
  # Requires translation!
-Roads and Railroads = 
+Roads and Railroads = Routes et Voies ferrées
  # Requires translation!
-Siege Units = 
+Siege Units = Unités de Siège
  # Requires translation!
-Strategic Resource = 
+Strategic Resource = Ressources Stratégiques
  # Requires translation!
-Unhappiness = 
+Unhappiness = Mécontentement
  # Requires translation!
-Victory Types = 
+Victory Types = Comment Gagner
  # Requires translation!
-Workers = 
+Workers = Ouvriers
 
 # Other civilopedia things
  # Requires translation!
-Nations = 
+Nations = Nations
 Promotions = Promotions
  # Requires translation!
-Available for [unitTypes] = 
+Available for [unitTypes] = Disponible pour [unitTypes]
 
 # Policies
 
@@ -1385,7 +1383,7 @@ Manufactory = Manufacture
 Customs house = Douanes
 Moai = Moai
 +1 additional Culture for each adjacent Moai = +1 en culture pour chaque Moai adjacent
-Can only be built on Coastal tiles = constructible uniquement sur des tuiles cotières
+Can only be built on Coastal tiles = constructible uniquement sur des cases cotières
 Barbarian encampment = Campement barbare
 
 # Unit types 
@@ -1418,10 +1416,10 @@ Maori Warrior = Guerrier Maori
 Archer = Archer
 Bowman = Archer Babylonien
 Work Boats = Bateau-atelier
-Cannot enter ocean tiles until Astronomy = Ne peut pas aller sur les tuiles océan avant la découverte de l'Astronomie
+Cannot enter ocean tiles until Astronomy = Ne peut pas aller sur les cases d'océan avant la découverte de l'Astronomie
 May create improvements on water resources = Peut créer des améliorations de ressources maritimes
 Trireme = Trirème
-Cannot enter ocean tiles = Ne peut pas aller sur les tuiles océan
+Cannot enter ocean tiles = Ne peut pas aller sur les case océan
 Chariot Archer = Archer sur char
 No defensive terrain bonus = Aucun bonus de terrain défensif
 Rough terrain penalty = Pénalité de terrain difficile
@@ -1501,7 +1499,7 @@ Carrier = Porte-avions
 Triplane = Triplan
 [percent]% chance to intercept air attacks = [percent]% chance d'intercepter une attaque aérienne
 Requires Manhattan Project = Necessite le projet Manhattan
-6 tiles in every direction always visible = 6 tuiles dans chaque direction sont toujours visibles
+6 tiles in every direction always visible = 6 cases dans chaque direction sont toujours visibles
 Great War Bomber = Bombardier de la grande guerre
 Rocket Artillery = Lance-roquettes
 Anti-Tank Gun = Canon antichar
@@ -1626,4 +1624,4 @@ Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
 Rejuvenation = Rajeunissement
  # Requires translation!
-All healing effects doubled = 
+All healing effects doubled = Tous les effets de soins sont doublés
