--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -680,9 +680,9 @@ We have allied with [nation]. = Abbiamo stretto un'alleanza con [nation].
 We have lost alliance with [nation]. = Non siamo più alleati di [nation].
 We have discovered [naturalWonder]! = Abbiamo scoperto [naturalWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Abbiamo ricevuto [goldAmount] gold per la scoperta di [naturalWonder]
-Your relationship with [cityStateName] is about to degrade = Il rapporto con [cityStateName] sta per deteriorarsi
-Your relationship with [cityStateName] degraded = Il rapporto con [cityStateName] si è deteriorato
-A new barbarian encampment has spawned! = E' sorto un nuovo accampamento barbaro!
+Your relationship with [cityStateName] is about to degrade = Stai perdendo il controllo di [cityStateName]
+Your relationship with [cityStateName] degraded = Tu e [cityStateName] non siete più amici
+A new barbarian encampment has spawned! = È sorto un nuovo accampamento barbaro!
 
 # World Screen UI
 
