--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -17,7 +17,6 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Observez vos statistiques en détail !\n Allez dans la vue d'ensemble (dans le coin en haut à droite) >\nCliquez sur 'Statistiques'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez un courriel à yairm210@hotmail.com avec les informations de la partie (Menu (en haut à gauche) -> Charger une partie -> Copy saved game to clipboard -> Copier dans le mail) et j'essayerai de régler cela aussi vite que possible !
- # Requires translation!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = Oh non ! On dirait que quelque chose ne s'est ABSOLUMENT pas passé comme prévu !  Ce n'est pas censé arriver ! S'il vous plaît, envoyez nous un rapport et nous essaierons de régler cela aussi vite que possible !
 
 # Buildings
@@ -484,11 +483,8 @@ Songhai = Songhaï
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Reçoit 3 fois plus d'or lors des pillages de campement barbare et de villes. Les unités embarquées peuvent se défendre.
 
- # Requires translation!
 Spain = Espagne
- # Requires translation!
 Isabella = Isabelle
- # Requires translation!
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Or pour la découverte d'une merveille de la Nature (500 si vous êtes le premier à la découvrir). La Culture, le Bonheur et le rendement de la case de la Merveille de la Nature sont doublés
 
 # New game screen
@@ -509,7 +505,6 @@ Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
 No barbarians = Aucun barbare
 No ancient ruins = Aucune ruine ancienne
- # Requires translation!
 No Natural Wonders = Aucune Merveille de la Nature
 Victory conditions = Conditions de victoire
 Scientific = Scientifique
@@ -683,14 +678,12 @@ One of our trades with [nation] has been cut short = L'un de nos accord commerci
 [nation] refused to stop settling cities near us! = Le/la/l' [nation] refuse d'arrêter de fonder des cités près de nous !
 We have allied with [nation]. = Nous sommes alliés avec le/la/l' [nation].
 We have lost alliance with [nation]. = Notre alliance est terminée avec le/la/l' [nation].
- # Requires translation!
 We have discovered [naturalWonder]! = Nous avons découverts [naturalWonder] !
- # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Nous avons reçu [goldAmount] Or pour la découverte de [naturalWonder]
- # Requires translation!
 Your relationship with [cityStateName] is about to degrade = Notre relation avec [cityStateName] va se dégrader
- # Requires translation!
 Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
+ # Requires translation!
+A new barbarian encampment has spawned! = 
 
 # World Screen UI
 
@@ -861,7 +854,6 @@ Closest city = Ville la plus proche
 Action = Action
 Defeated = Vaincu
 Tiles = Cases
- # Requires translation!
 Natural Wonders = Merveilles de la Nature
 
 #Victory
@@ -948,46 +940,27 @@ Requires = Requiert
 
 # Civilopedia Tutorials names
 
- # Requires translation!
 After Conquering = Prise d'une cité
- # Requires translation!
 City Range = Portée d'une Cité
- # Requires translation!
 Contact Me = Contactez moi
- # Requires translation!
 Culture and Policies = Culture et Doctrines
- # Requires translation!
 Embarking = Embarquer
- # Requires translation!
 Enemy City = Cité Ennemie
- # Requires translation!
 Idle Units = Unités Inactives
- # Requires translation!
 Injured Units = Unités Blessées
- # Requires translation!
 Introduction = Introduction
- # Requires translation!
 Luxury Resource = Ressources de Luxe
- # Requires translation!
 New Game = Nouvelle Partie
- # Requires translation!
 Roads and Railroads = Routes et Voies ferrées
- # Requires translation!
 Siege Units = Unités de Siège
- # Requires translation!
 Strategic Resource = Ressources Stratégiques
- # Requires translation!
 Unhappiness = Mécontentement
- # Requires translation!
 Victory Types = Comment Gagner
- # Requires translation!
 Workers = Ouvriers
 
 # Other civilopedia things
- # Requires translation!
 Nations = Nations
 Promotions = Promotions
- # Requires translation!
 Available for [unitTypes] = Disponible pour [unitTypes]
 
 # Policies
@@ -1623,5 +1596,4 @@ Ambush II = Embuscade II
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
 Rejuvenation = Rajeunissement
- # Requires translation!
 All healing effects doubled = Tous les effets de soins sont doublés
