--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -9,17 +9,15 @@ Pick a construction!\nEnter city screen > Click on a unit or building (left side
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę!\nPrzejdź przez wszystkie jednostki wciskając przycisk 'Następna jednostka' > Wciśnij 'Następna tura'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić cywili
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację!\nEksploruj świat do momentu napotkania nowej cywilizacji!
-Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk menu (lewy górny róg) > Wciśnij przycisk 'Opcje'
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk 'Menu' (lewy górny róg) > Wciśnij przycisk 'Opcje'
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!\nStwórz Robotnika > Przemieść go na Równiny lub Łąkę >n\ Kliknij 'Zbuduj ulepszenie' (na dole po lewej stronie, nad tabelą jednostek) > Wybierz Farmę > Zostaw tam pracownika, dopóki nie skończy
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami\n0r, Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit =  Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną!n\nWybierz jednostke powietrzną > wybierz inne miasto w zasięgu > \nPrzemieść jednostkę do innego miasta
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' =   Zobacz rozkład statystyk!\nWejdź w 'Przegląd' (górny prawy róg) >\nKliknij na 'Statystyki'
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobacz rozkład statystyk!\nWejdź w 'Przegląd' (górny prawy róg) >\nKliknij na 'Statystyki'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij mi proszę (yairm210@hotmail.com) maila z informacją o grze (menu -> zapisz grę -> skopiuj informacje o grze -> wklej do maila) a ja postaram się to naprawić. Dziękuję za pomoc.
- # Requires translation!
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij nam raport a my postramy się go naprawić tak szybko, jak to możliwe!
 
 # Buildings
 
@@ -556,7 +554,7 @@ No human players selected! = Nie wybrano żadnego ludzkiego gracza!
 # Multiplayer
 
 Username = Nazwa użytkownika
-Multiplayer = Wieloosobowy
+Multiplayer = Gra Wieloosobowa
 Could not download game! = Nie można pobrać gry!
 Could not upload game! = Nie można przesłać gry!
 Join Game = Dołącz do gry
@@ -682,12 +680,9 @@ We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
 We have discovered [naturalWonder]! = Odkryliśmy [naturlWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Otrzymaliśmy [goldAmount] Złota za odkrycie [naturalWonder]
- # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
- # Requires translation!
-Your relationship with [cityStateName] degraded = 
- # Requires translation!
-A new barbarian encampment has spawned! = 
+Your relationship with [cityStateName] is about to degrade = Twoja relacje z [cityStateName] jest bliska degradacji
+Your relationship with [cityStateName] degraded = Twoja relacja z [cityStateName] została zdegradowana
+A new barbarian encampment has spawned! = Nowy obóz barbarzyńców został utworzony!
 
 # World Screen UI
 
@@ -777,9 +772,9 @@ Growth bonus = Bonus do rośnięcia
 Unassigned population = Nieprzydzieleni cywile
 [turnsToExpansion] turns to expansion = Ilość tur do ekspansji: [turnsToExpansion] 
 Stopped expansion = Zatrzymana ekspansja
-[turnsToPopulation] turns to new population = Ilość tur nowej populacji: [turnsToPopulation] 
+[turnsToPopulation] turns to new population = Ilość tur do nowej populacji: [turnsToPopulation] 
 Food converts to production = Przetwarzanie żywności na produkcje
-[turnsToStarvation] turns to lose population =  Ilość tur do utraty populacji: [turnsToStarvation]
+[turnsToStarvation] turns to lose population = Ilość tur do utraty populacji: [turnsToStarvation]
 Stopped population growth = Zatrzymane rośnięcie populacji
 In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numerOfTurns]
 Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
@@ -866,8 +861,8 @@ Science victory = Zwycięstwo naukowe
 Cultural victory = Zwycięstwo kulturowe
 Conquest victory = Zwycięstwo militarne
 Complete all the spaceship parts\n to win! = Skompletuj wszystkie części statku kosmicznego\n aby wygrać!
-Complete 5 policy branches\n to win! = Ukończ 4 gałęzie ustrojów społecznych\n aby wygrać!
-Destroy all enemies\n to win! =  Zniszcz wszystkich wrogów\n aby wygrać!
+Complete 5 policy branches\n to win! = Ukończ 5 gałęzi ustrojów społecznych\n aby wygrać!
+Destroy all enemies\n to win! = Zniszcz wszystkich wrogów\n aby wygrać!
 You have won a scientific victory! = Wygrałeś poprzez naukowe zwycięstwo!
 You have won a cultural victory! = Wygraleś poprzez kulturowe zwycięstwo!
 You have won a domination victory! = Wygrałeś poprzez dominację!
@@ -963,11 +958,9 @@ Victory Types = Rodzaje Zwycięstw
 Workers = Robotnicy
 
 # Other civilopedia things
- # Requires translation!
-Nations = 
+Nations = Kraje
 Promotions = Awanse
- # Requires translation!
-Available for [unitTypes] = 
+Available for [unitTypes] = Dostępne dla jednostki [unitType]
 
 # Policies
 
@@ -1515,7 +1508,7 @@ Bonus for units in 2 tile radius 15% = +15% do walki dla jednostek w zasięgu 2 
 # Promotions
 
 Pick promotion = Awansuj jednostkę
- OR  =  LUB 
+ OR  = LUB 
 Bonus vs [unitType] = Bonus przeciwko [unitType]
 Penalty vs [unitType] = Słaboś przeciwko [unitType]
 Accuracy I = Celność I
